--- a/V18/content/theorie.tex
+++ b/V18/content/theorie.tex
@@ -71,9 +71,10 @@ mit
 Dabei ist $r_e$ der klassische Elektronenradius. Für $\epsilon\rightarrow 0$ gilt $\sigma_{Co} \approx \sigma_{Th}$.
 Es ergibt sich für den differentiellen Wirkungsquerschnitt:
 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:klein}
     \frac{\symup{d}\sigma}{\symup{d}E} = \frac{3}{8}\sigma_{Th}\cdot\frac{1}{m_0 c^2 \epsilon^2}\left(2+\left(\frac{E}{h\nu - E}\right)^2\left[\frac{1}{\epsilon^2}+\frac{h\nu-E}{h\nu}-\frac{2}{\epsilon}\left(\frac{h\nu-E}{h\nu}\right)\right]\right)\,.
-\end{equation*}
+\end{equation}
 
 Dabei ist $E$ die Energie des gestoßenen Elektrons und $h\nu$ die Energie des einfallenden Gammaquants.
 
