--- a/V48/content/diskussion.tex
+++ b/V48/content/diskussion.tex
@@ -1,7 +1,7 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 
-Relative Fehler der Mesergebnisse werden im Folgenden gemäß der Formel
+Relative Fehler der Messergebnisse werden im Folgenden gemäß der Formel
 
 \begin{equation}
     \Delta x = \left| \frac{x_\text{mess} - x_\text{theo}}{x_\text{theo}}\right|
@@ -9,12 +9,12 @@ Relative Fehler der Mesergebnisse werden im Folgenden gemäß der Formel
 
 bestimmt. 
 
-Von dem Theoriewert der Aktivierungsenergie $W_\text{theo} = \SI{0.66 +- 0.01}{\eV}$ 
+Von dem Theoriewert der Aktivierungsenergie $W_\text{theo} = \SI{0.66 +- 0.01}{\eV}$ \cite{Buch}
 weichen die Ergebnisse der Approximationsmethode um
 
 \begin{align*}
-    \Delta W_1 &= \SI{8.18}{\percent} \\
-    \Delta W_2 &= \SI{14.85}{\percent}
+    \Delta W_1 &= \SI{18.18}{\percent} \\
+    \Delta W_2 &= \SI{13.64}{\percent}
 \end{align*}
 
 und die der Integrationsmethode um
@@ -28,8 +28,8 @@ ab.
 
 Es ist zu beobachten, dass die Ergebnisse der Integrationsmethode sehr viel stärker vom Theoriewert abweichen, 
 als die der Näherungsmethode. Mögliche Fehlerquellen sind die numerische Natur der Integration, sowie Abweichungen der
-Heizraten der einzelnen Messschritte von ihrem Mittelwert. Zudem ist der Fit der Daten komplexer als bei der
-Näherungsmethode. Aufgrund des sehr unsicher bestimmten Fitparameters $a$, konnten dort keine aussagekräftigen Fehlerangaben
+Heizraten der einzelnen Messschritte von ihrem Mittelwert. Zudem ist die Approximation der Daten komplexer als bei der
+Näherungsmethode. Aufgrund des sehr unsicher bestimmten Näherungsparameters $a$, konnten dort keine aussagekräftigen Fehlerangaben
 gemacht werden. \\
 
 Dies spiegelt sich auch in den Relaxationszeiten wieder, die mit den Werten der Aktivierungsenergie berechnet wurden.
@@ -41,7 +41,7 @@ Die nach der Integrationsmethode bestimmten Werte
 \end{align*}
 
 weichen um achtzehn Größenornungen vom Theoriewert
-$\tau_{0,\text{theo}} = \SI{4 +- 2}{\second}$ nach unten ab. Zum Teil kann dafür die hohe Abhängigkeit der Relaxationszeitberechnung
+$\tau_{0,\text{theo}} = \SI{4 +- 2}{\second}$ \cite{Buch} nach unten ab. Zum Teil kann dafür die hohe Abhängigkeit der Relaxationszeitberechnung
 von den gemessenen Maximaltemperaturen $T_\text{max}$ Ursache sein.
 
 Die nach der Näherungsmethode bestimmten Relaxationszeiten weichen nur um eine Größenordung ab.\\
