--- a/V48/lit.bib
+++ b/V48/lit.bib
@@ -4,3 +4,10 @@
   url = {https://moodle.tu-dortmund.de/pluginfile.php/1136044/mod_resource/content/1/V48.pdf},
   date = {20.06.2020},
 }
+
+@book{Buch,
+  author = {R. Muccillo und J. Rolfe},
+  title = {"Effect of Irradiation on Impurity–Vacancy Dipoles in KBr Crystals Doped with Strontium". In: physica status solidi (b) 61.2 (), S. 579–587},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pssb.2220610223},
+  date = {30.07.2020},
+}
