--- a/V18/content/diskussion.tex
+++ b/V18/content/diskussion.tex
@@ -75,7 +75,7 @@ darauf schließen, dass es sich bei dem unbekannten Strahler um ein Urangestein 
 [1] Praktikumsanleitung. Versuch V18 - Der Reinst-Germanium-Detektor als Instrument
 der Gamma-Spektroskopie:
 
-\url{http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/FP/SKRIPT/V18.pdf}.
+\url{https://github.com/bixel/FP14/blob/master/V18_Ge-Detektor/V18.pdf}; letzter Zugriff 30.07.2020
 
 [2] Laboratoire National Henri Becquerel:
 
